--- a/homeworks/Read_write_data_ipynb_.ipynb
+++ b/homeworks/Read_write_data_ipynb_.ipynb
@@ -12,6 +12,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-21d06638dba2>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-21d06638dba2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    jupyter contrib nbextension install --user\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install jupyter_nbextensions_configurator jupyter_contrib_nbextensions\n",
+    "jupyter contrib nbextension install --user\n",
+    "jupyter nbextensions_configurator enable --user"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "HCQA4Thv32Js"
@@ -636,7 +656,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "EdPpkCwP9J22"
