--- a/homeworks/MK_EDA.ipynb
+++ b/homeworks/MK_EDA.ipynb
@@ -1446,7 +1446,7 @@
     "df_mpi_grouped = df_mpi\\\n",
     "    .groupby(['ISO', 'country', 'world_region'])['MPI']\\\n",
     "    .mean()\\\n",
-    "    .fillna(0)\\\n",
+    "       .fillna(0)\\\n",
     "    .reset_index()"
    ]
   },
@@ -4881,7 +4881,49 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
-  "toc-showtags": false
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "toc-showtags": false,
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 1
