--- a/homeworks/Math_base_objects_HW.ipynb
+++ b/homeworks/Math_base_objects_HW.ipynb
@@ -260,35 +260,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fn(x):\n",
-    "    if abs(x) != 2:\n",
-    "        return ((x * (4 - x))**3)\n",
-    "    else:\n",
-    "        return ((2-x) / (2+x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle -0.333333333333333$"
+      ],
       "text/plain": [
-       "[0, 4]"
+       "-0.333333333333333"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solve(fn(x), x)"
+    "expr = (x * (4 - x))**(1/3)\n",
+    "solve(expr, 2 - x)[0] / solve(expr, 2 + x)[0] "
    ]
   },
   {
