--- a/homeworks/Math_base_objects_HW.ipynb
+++ b/homeworks/Math_base_objects_HW.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sympy import *\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
