--- a/homeworks/Math_base_objects_HW.ipynb
+++ b/homeworks/Math_base_objects_HW.ipynb
@@ -9,8 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-19T19:35:08.327382Z",
+     "start_time": "2021-02-19T19:35:08.324649Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sympy import *\n",
@@ -19,8 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-19T19:35:08.713381Z",
+     "start_time": "2021-02-19T19:35:08.709532Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x, y, z = symbols('x y z')"
@@ -260,26 +270,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-19T19:35:14.811004Z",
+     "start_time": "2021-02-19T19:35:14.658036Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle -0.333333333333333$"
+       "$\\displaystyle \\frac{\\left(\\left(6 - x\\right) \\left(x - 2\\right)\\right)^{0.333333333333333}}{\\left(\\left(2 - x\\right) \\left(x + 2\\right)\\right)^{0.333333333333333}}$"
       ],
       "text/plain": [
-       "-0.333333333333333"
+       "((2 - x)*(x + 2))**(-0.333333333333333)*((6 - x)*(x - 2))**0.333333333333333"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "expr = (x * (4 - x))**(1/3)\n",
-    "solve(expr, 2 - x)[0] / solve(expr, 2 + x)[0] "
+    "def g(x):\n",
+    "    return (x * (4 - x))**(1/3)\n",
+    "\n",
+    "g(x-2) / g(x+2) "
    ]
   },
   {
@@ -362,7 +379,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
