--- a/homeworks/Math_matrix_equation.ipynb
+++ b/homeworks/Math_matrix_equation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spoken-sleeve",
+   "id": "detailed-personality",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T17:59:57.319307Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "valid-excellence",
+   "id": "provincial-omega",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:15:40.534797Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specialized-desert",
+   "id": "center-arkansas",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:00:10.575166Z",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cleared-starter",
+   "id": "remarkable-blake",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:03:40.252314Z",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exempt-helmet",
+   "id": "latin-recovery",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:02:36.048259Z",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "forbidden-color",
+   "id": "double-slovenia",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:04:24.985867Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scenic-symphony",
+   "id": "determined-senior",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "crazy-antibody",
+   "id": "duplicate-publisher",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:05:26.982676Z",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vocal-incidence",
+   "id": "major-heather",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "designed-patch",
+   "id": "official-branch",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:06:51.458156Z",
@@ -213,14 +213,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premium-canyon",
+   "id": "dying-activity",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "behavioral-hearts",
+   "id": "still-intro",
    "metadata": {},
    "source": [
     "### Решите задачу аппроксимации из домашнего задания 9 модуля (Часть №3) с помощью псевдообратной матрицы, а не градиентного спуска, используя для вычислений sympy. Насколько более точным получилось решение?"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "above-hamburg",
+   "id": "concrete-snapshot",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:16:07.935555Z",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "wired-bouquet",
+   "id": "express-papua",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:15:43.265626Z",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "split-reviewer",
+   "id": "herbal-cache",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:19:21.904799Z",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "indie-symposium",
+   "id": "coordinate-travel",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:20:07.381427Z",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "comparative-passenger",
+   "id": "attractive-murder",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:20:55.265788Z",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dried-arabic",
+   "id": "necessary-stevens",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:31:10.029078Z",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "under-palace",
+   "id": "durable-little",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T18:35:09.952947Z",
@@ -959,14 +959,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "floral-teach",
-   "metadata": {},
+   "execution_count": 58,
+   "id": "strategic-above",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-25T18:43:34.611987Z",
+     "start_time": "2021-02-25T18:43:34.610076Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "#  При градиентном спуску то же значение, что и при использовании псевдообратной\n",
-    "# матрицы при шаге 0.01 достигнуто за 546 итераций"
+    "#  При градиентном спуски то же значение MSE, что и при использовании псевдообратной\n",
+    "# матрицы, при шаге 0.01 достигнуто за 546 итераций"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "crucial-change",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
