--- a/homeworks/MK_EDA.ipynb
+++ b/homeworks/MK_EDA.ipynb
@@ -176,8 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:47.593461Z",
+     "start_time": "2021-03-11T20:28:46.323586Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -200,20 +204,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: missingno in /home/arcry/anaconda3/lib/python3.8/site-packages (0.4.2)\n",
-      "Requirement already satisfied: scipy in /home/arcry/anaconda3/lib/python3.8/site-packages (from missingno) (1.5.2)\n",
-      "Requirement already satisfied: seaborn in /home/arcry/anaconda3/lib/python3.8/site-packages (from missingno) (0.11.0)\n",
-      "Requirement already satisfied: matplotlib in /home/arcry/anaconda3/lib/python3.8/site-packages (from missingno) (3.3.2)\n",
-      "Requirement already satisfied: numpy in /home/arcry/anaconda3/lib/python3.8/site-packages (from missingno) (1.19.2)\n",
-      "Requirement already satisfied: pandas>=0.23 in /home/arcry/anaconda3/lib/python3.8/site-packages (from seaborn->missingno) (1.1.3)\n",
-      "Requirement already satisfied: certifi>=2020.06.20 in /home/arcry/anaconda3/lib/python3.8/site-packages (from matplotlib->missingno) (2020.6.20)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/arcry/anaconda3/lib/python3.8/site-packages (from matplotlib->missingno) (2.4.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/arcry/anaconda3/lib/python3.8/site-packages (from matplotlib->missingno) (2.8.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/arcry/anaconda3/lib/python3.8/site-packages (from matplotlib->missingno) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/arcry/anaconda3/lib/python3.8/site-packages (from matplotlib->missingno) (1.3.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/arcry/anaconda3/lib/python3.8/site-packages (from matplotlib->missingno) (8.0.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /home/arcry/anaconda3/lib/python3.8/site-packages (from pandas>=0.23->seaborn->missingno) (2020.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/arcry/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib->missingno) (1.15.0)\n"
+      "Collecting missingno\n",
+      "  Using cached missingno-0.4.2-py3-none-any.whl (9.7 kB)\n",
+      "Requirement already satisfied: scipy in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from missingno) (1.6.0)\n",
+      "Requirement already satisfied: seaborn in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from missingno) (0.11.1)\n",
+      "Requirement already satisfied: matplotlib in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from missingno) (3.3.2)\n",
+      "Requirement already satisfied: numpy in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from missingno) (1.19.2)\n",
+      "Requirement already satisfied: certifi>=2020.06.20 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from matplotlib->missingno) (2020.12.5)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from matplotlib->missingno) (8.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from matplotlib->missingno) (2.8.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from matplotlib->missingno) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from matplotlib->missingno) (2.4.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from matplotlib->missingno) (1.3.1)\n",
+      "Requirement already satisfied: six in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from cycler>=0.10->matplotlib->missingno) (1.15.0)\n",
+      "Requirement already satisfied: pandas>=0.23 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from seaborn->missingno) (1.2.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /home/arcry/anaconda3/envs/myenv/lib/python3.9/site-packages (from pandas>=0.23->seaborn->missingno) (2021.1)\n",
+      "Installing collected packages: missingno\n",
+      "Successfully installed missingno-0.4.2\n"
      ]
     }
    ],
@@ -223,8 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:48.121940Z",
+     "start_time": "2021-03-11T20:28:47.596281Z"
+    },
     "executionInfo": {
      "elapsed": 7018,
      "status": "ok",
@@ -257,8 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:48.124758Z",
+     "start_time": "2021-03-11T20:28:48.123165Z"
+    },
     "executionInfo": {
      "elapsed": 11670,
      "status": "ok",
@@ -280,8 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:50.880239Z",
+     "start_time": "2021-03-11T20:28:48.126750Z"
+    },
     "executionInfo": {
      "elapsed": 11658,
      "status": "ok",
@@ -312,8 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:50.898662Z",
+     "start_time": "2021-03-11T20:28:50.881052Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 581
@@ -540,7 +563,7 @@
        "4            monthly  2014-01-01  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,8 +583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:52.020712Z",
+     "start_time": "2021-03-11T20:28:50.900114Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 754
@@ -587,7 +614,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -608,8 +635,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:54.399442Z",
+     "start_time": "2021-03-11T20:28:52.021925Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 714
@@ -635,7 +666,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,8 +705,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:54.405259Z",
+     "start_time": "2021-03-11T20:28:54.401326Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -720,7 +755,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,8 +766,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:54.558558Z",
+     "start_time": "2021-03-11T20:28:54.406812Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 297
@@ -880,7 +919,7 @@
        "max        158.000000    2986.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,8 +930,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:56.369805Z",
+     "start_time": "2021-03-11T20:28:54.559528Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 207
@@ -1054,7 +1097,7 @@
        "freq             426502             342717        1308  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,8 +1155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:56.459277Z",
+     "start_time": "2021-03-11T20:28:56.370795Z"
+    },
     "executionInfo": {
      "elapsed": 26286,
      "status": "ok",
@@ -1135,8 +1182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:56.464190Z",
+     "start_time": "2021-03-11T20:28:56.460431Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -1199,7 +1250,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,8 +1261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:56.713946Z",
+     "start_time": "2021-03-11T20:28:56.465455Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 610
@@ -1281,8 +1336,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:56.723905Z",
+     "start_time": "2021-03-11T20:28:56.715063Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 204
@@ -1415,7 +1474,7 @@
        "4         (34.8100067, 67.8212104)  34.810007  67.821210  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,8 +1485,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:56.732960Z",
+     "start_time": "2021-03-11T20:28:56.725283Z"
+    },
     "executionInfo": {
      "elapsed": 26253,
      "status": "ok",
@@ -1452,8 +1515,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.119519Z",
+     "start_time": "2021-03-11T20:28:56.734133Z"
+    },
     "executionInfo": {
      "elapsed": 26365,
      "status": "ok",
@@ -1474,8 +1541,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.156355Z",
+     "start_time": "2021-03-11T20:28:57.120549Z"
+    },
     "executionInfo": {
      "elapsed": 26356,
      "status": "ok",
@@ -1496,8 +1567,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.160886Z",
+     "start_time": "2021-03-11T20:28:57.157501Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -1528,7 +1603,7 @@
        "Name: world_region, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,8 +1614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.164251Z",
+     "start_time": "2021-03-11T20:28:57.162180Z"
+    },
     "executionInfo": {
      "elapsed": 26359,
      "status": "ok",
@@ -1561,8 +1640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.285678Z",
+     "start_time": "2021-03-11T20:28:57.165512Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 613
@@ -1624,8 +1707,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.337688Z",
+     "start_time": "2021-03-11T20:28:57.286839Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -1647,21 +1734,21 @@
     {
      "data": {
       "text/plain": [
-       "female                                                                                                        426502\n",
-       "male                                                                                                          134710\n",
-       "female, female                                                                                                 12164\n",
-       "female, female, female                                                                                         11676\n",
-       "female, female, female, female                                                                                  9052\n",
-       "                                                                                                               ...  \n",
-       "female, female, male, female, male, female, male, female, female, male                                             1\n",
-       "female, female, female, female, female, female, female, female, female, female, female, male, male, female         1\n",
-       "male, male, male, female, female, female, male, male, male, female, male, female, male, female, male               1\n",
-       "female, male, male, male, male, female, female, male, female, female, female                                       1\n",
-       "male, male, female, male, female, male, male, male, male, male, male, female, female, male                         1\n",
+       "female                                                                                                                                                              426502\n",
+       "male                                                                                                                                                                134710\n",
+       "female, female                                                                                                                                                       12164\n",
+       "female, female, female                                                                                                                                               11676\n",
+       "female, female, female, female                                                                                                                                        9052\n",
+       "                                                                                                                                                                     ...  \n",
+       "female, male, female, male, male, male, female, female, male, female, male, female, female, male, female, female                                                         1\n",
+       "female, male, female, female, female, female, female, female, female, female, female, female, female, female, female, female, female, female, female, male, male         1\n",
+       "female, female, male, male, female, male, female, female, female, female, female, female, male                                                                           1\n",
+       "female, female, male, male, male, female, female, male, male, female, male, male, female, male                                                                           1\n",
+       "female, female, female, male, male, male, female, female, female, female, male, female, female, female, male, female                                                     1\n",
        "Name: borrower_genders, Length: 11298, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,8 +1770,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:28:57.533037Z",
+     "start_time": "2021-03-11T20:28:57.338811Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 444
@@ -1747,8 +1838,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T20:29:06.108843Z",
+     "start_time": "2021-03-11T20:29:05.737325Z"
+    },
     "executionInfo": {
      "elapsed": 32969,
      "status": "ok",
@@ -4879,7 +4974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   },
   "toc": {
    "base_numbering": 1,
