--- a/Deep_Learning_MFTI/Seminar/[seminar,adv]linreg_regularization_ipynb_.ipynb
+++ b/Deep_Learning_MFTI/Seminar/[seminar,adv]linreg_regularization_ipynb_.ipynb
@@ -2777,7 +2777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -2788,7 +2788,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "426.667px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
