--- a/homeworks/MK_EDA.ipynb
+++ b/homeworks/MK_EDA.ipynb
@@ -4974,7 +4974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.2"
   },
   "toc": {
    "base_numbering": 1,
@@ -4987,7 +4987,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "toc-showtags": false,
   "varInspector": {
