--- a/ML_HSE/hw/HW5_Pandas_SVM.ipynb
+++ b/ML_HSE/hw/HW5_Pandas_SVM.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "3812a55c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:38:47.626727Z",
-     "start_time": "2021-05-17T13:38:47.607712Z"
+     "end_time": "2021-06-30T08:47:10.438091Z",
+     "start_time": "2021-06-30T08:47:09.261068Z"
     }
    },
    "outputs": [],
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "ae42c99f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:38:47.782841Z",
-     "start_time": "2021-05-17T13:38:47.774809Z"
+     "end_time": "2021-06-30T08:47:10.469066Z",
+     "start_time": "2021-06-30T08:47:10.440091Z"
     }
    },
    "outputs": [],
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "e437a44c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:38:48.013914Z",
-     "start_time": "2021-05-17T13:38:47.999884Z"
+     "end_time": "2021-06-30T08:47:10.516069Z",
+     "start_time": "2021-06-30T08:47:10.471067Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
        "4  0.0  0.48  0.39"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,12 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "f1135591",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:38:48.587411Z",
-     "start_time": "2021-05-17T13:38:48.575399Z"
+     "end_time": "2021-06-30T08:47:11.306070Z",
+     "start_time": "2021-06-30T08:47:11.301069Z"
     }
    },
    "outputs": [],
@@ -139,12 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "3be25b95",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:38:50.153309Z",
-     "start_time": "2021-05-17T13:38:50.135339Z"
+     "end_time": "2021-06-30T08:47:13.407066Z",
+     "start_time": "2021-06-30T08:47:11.797068Z"
     }
    },
    "outputs": [],
@@ -215,12 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "188a55c8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:42:03.653234Z",
-     "start_time": "2021-05-17T13:40:22.023691Z"
+     "end_time": "2021-06-30T08:47:16.941066Z",
+     "start_time": "2021-06-30T08:47:15.943068Z"
     }
    },
    "outputs": [],
@@ -235,12 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "c708c5b4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:43:04.629406Z",
-     "start_time": "2021-05-17T13:43:04.619430Z"
+     "end_time": "2021-06-30T08:47:16.957067Z",
+     "start_time": "2021-06-30T08:47:16.943070Z"
     }
    },
    "outputs": [],
@@ -250,12 +250,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
+   "id": "235d8a7e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-30T08:52:22.239903Z",
+     "start_time": "2021-06-30T08:52:22.232907Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "492fcf42",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T13:43:12.850614Z",
-     "start_time": "2021-05-17T13:43:12.832592Z"
+     "end_time": "2021-06-30T08:47:16.972070Z",
+     "start_time": "2021-06-30T08:47:16.960069Z"
     }
    },
    "outputs": [],
