--- a/Skillbox/homeworks/MK_EDA.ipynb
+++ b/Skillbox/homeworks/MK_EDA.ipynb
@@ -4987,7 +4987,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "toc-showtags": false,
   "varInspector": {
